--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -29,28 +29,28 @@
     
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active pr-3">
-                <a class="nav-link" href="#">Bienvenida</a>
-              </li>
-              <li class="nav-item active pr-3">
-                <a class="nav-link" href="#">Nosotros</a>
-              </li>
-              <li class="nav-item active pr-3">
-                <a class="nav-link" href="#">Nuestros Servicios</a>
-              </li>
-              <li class="nav-item dropdown active">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  Contáctenos
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Nuevo Contacto</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Lista de Contactos</a>
-                </div>
-              </li>
+                <li class="nav-item active pr-3">
+                    <a class="nav-link" href="index.html">Bienvenida</a>
+                </li>
+                <li class="nav-item active pr-3">
+                    <a class="nav-link" href="nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item active pr-3">
+                    <a class="nav-link" href="servicios.html">Nuestros Servicios</a>
+                </li>
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" href="contacto.html" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Contáctenos
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="contacto.html">Nuevo Contacto</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="creado.html">Lista de Contactos</a>
+                  </div>
+                </li>
             </ul>
-          </div>
+        </div>
         </nav>
       </div>
 
